New style, new content, many fixes

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,17 @@
 @article{riebe2020vorratsdatenspeicherung,
   title={Die Vorratsdatenspeicherung in Europa},
   author={Riebe, Thea and Haunschild, Jasmin and Divo, Felix and Lang, Matthias and Roitburd, Gerbert and Franken, Jonas and Reuter, Christian},
-  journal={Datenschutz und Datensicherheit-DuD},
+  journal={Datenschutz und Datensicherheit},
   volume={44},
   number={5},
   pages={316--321},
   year={2020},
-  publisher={Springer Fachmedien Wiesbaden}
+  month={4},
+  publisher={Springer Fachmedien Wiesbaden},
+
+  bibtex_show={true},
+  abbr={Springer DuD},
+  pdf={https://www.peasec.de/paper/2020/2020_Riebeetal_VDSinEuropa_DuD.pdf}
 }
 
 @article{tavenard2020tslearn,
@@ -16,5 +21,11 @@
   volume={21},
   number={118},
   pages={1--6},
-  year={2020}
+  year={2020},
+  month={4},
+
+  bibtex_show={true},
+  abbr={JMLR},
+  pdf={https://jmlr.org/papers/volume21/20-091/20-091.pdf},
+  code={https://github.com/tslearn-team/tslearn}
 }
