Improve layout; add about page contents, add announcement, improve bio page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,8 +16,8 @@
 
 @article{tavenard2020tslearn,
   title={Tslearn, A Machine Learning Toolkit for Time Series Data},
-  author={Tavenard, Romain and Faouzi, Johann and Vandewiele, Gilles and Divo, Felix and Androz, Guillaume and Holtz, Chester and Payne, Marie and Yurchak, Roman and Ru{\ss}wurm, Marc and Kolar, Kushal and others},
-  journal={Journal of Machine Learning Research},
+  author={Tavenard, Romain and Faouzi, Johann and Vandewiele, Gilles and Divo, Felix and Androz, Guillaume and Holtz, Chester and Payne, Marie and Yurchak, Roman and Ru{\ss}wurm, Marc and Kolar, Kushal and Woods, Eli},
+  journal={Journal of Machine Learning Research -- Machine Learning Open Source Software},
   volume={21},
   number={118},
   pages={1--6},
@@ -25,7 +25,7 @@
   month={4},
 
   bibtex_show={true},
-  abbr={JMLR},
+  abbr={JMLR MLOSS},
   pdf={https://jmlr.org/papers/volume21/20-091/20-091.pdf},
   code={https://github.com/tslearn-team/tslearn}
 }
