--- a/_bibliography/theses.bib
+++ b/_bibliography/theses.bib
@@ -5,6 +5,7 @@
   year={2019},
   school={TU Darmstadt},
   month={11},
+  note={Advisor: Dr.-Ing. Dorothea Koert},
 
   bibtex_show={true},
   abbr={Bachelor Thesis},
@@ -17,7 +18,6 @@
   type={Master Thesis},
   year={2022},
   school={TU Darmstadt},
-  %month={5},
 
   %bibtex_show={false},
   abbr={Master Thesis}
