Add master thesis, update installation notes

--- a/_bibliography/theses.bib
+++ b/_bibliography/theses.bib
@@ -5,7 +5,7 @@
   year={2019},
   school={TU Darmstadt},
   month={11},
-  note={Advisor: Dr.-Ing. Dorothea Koert},
+  note={Advisors: Prof. Jan Peters, Ph.D.; Dr.-Ing. Dorothea Koert},
 
   bibtex_show={true},
   abbr={Bachelor Thesis},
@@ -13,12 +13,15 @@
 }
 
 @thesis{divo2022masterthesis,
-  title={Upcoming},
+  title={Learning to Sample from Sum-Product Networks},
   author={Divo, Felix},
   type={Master Thesis},
   year={2022},
+  month={06},
   school={TU Darmstadt},
+  note={Advisors: Prof. Dr. Kristian Kersting; Steven Lang},
 
-  %bibtex_show={false},
-  abbr={Master Thesis}
+  bibtex_show={true},
+  abbr={Master Thesis},
+  pdf={publications/Master_Thesis_Felix_Divo_Sampling_SPNs.pdf}
 }
